changed vw back to 100 from 99. Added overflow-x: hidden to body to hide horizontal scroll bar issue.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     max-width: 1500px;
     margin: 0 auto;
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
   }
   
 h1, h2, h3 {
